--- a/src/components/css/login.module.css
+++ b/src/components/css/login.module.css
@@ -20,7 +20,7 @@
     color:#fff;
     opacity: 0.7;
     padding-top: 40px;
-    font-size: 100px;
+    font-size: 130px;
     margin:0;
     font-family: 'UnifrakturCook', cursive;
 }
@@ -52,14 +52,20 @@
 }
 .login__body-button{
     margin-top: 29px;
-    background: #690101;
-    color: #EFBC00;
+    opacity: 0.9;
+    background: #0B131D;
+    color: #fff;
     font-weight: 100;
     font-size: 21px;
-    padding: 6px 100px;
+    padding: 6px 80px;
     font-family: 'Roboto', sans-serif;
     border-radius: 10px;
-    border: 4px solid rgb(28, 28, 31);
+    border: 1px solid #0B131D;
     text-decoration: none;
     cursor: pointer;
+    transition: all .2s ease-in-out; 
 }
+.login__body-button:hover{
+    border: 1px solid #fff;
+    opacity: 1;
+  }
